# icloud-contacts-organizer

./: .bumpversion.cfg  .gitignore  .markdownlint.json  AGENTS.md  LICENSE  Makefile  README.md  environment.yml  make.cmd  pyproject.toml
config/: config.ini  config.yml
docsrc/: mkdocs.yml
docsrc/mkdocs/: 02_development_plan.md  api.md  cookiecutter_reference.md  index.md
notebooks/: notebook-template.ipynb
scripts/: config.py  make_data.py  make_pyt_archive.py
src/icloud_contacts_organizer/: __init__.py  _main.py
src/icloud_contacts_organizer/utils/: __init__.py  _logging.py  _main_utils.py
testing/: conftest.py  test_icloud_contacts_organizer.py
