[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "icloud-contacts-organizer"

version = "0.0.0"

authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]

description = "Stringing together a way to use a bit of hacking and AI to get my contacts better organized."

readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
]


license = {"text" = "Apache-2.0"}


dependencies = [
    "arcgis>=2.2.0",
    "numpy>=1.7",
    "pandas>=1.0.5",
    "pyarrow>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["icloud_contacts_organizer"]
